<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_light"
        android:icon="@drawable/light"
        android:title="@string/title_light" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/report"
        android:title="@string/title_report" />

    <item
        android:id="@+id/navigation_administrator_light"
        android:icon="@drawable/light"
        android:title="@string/title_classes" />

    <item
        android:id="@+id/navigation_administrator_report"
        android:icon="@drawable/report"
        android:title="@string/title_reports" />

</menu>
